Fixing roundedButtonGroup z-index issues

--- a/Packages/ohif-design/components/roundedButtonGroup/roundedButtonGroup.styl
+++ b/Packages/ohif-design/components/roundedButtonGroup/roundedButtonGroup.styl
@@ -3,6 +3,8 @@
 $height = 25px
 
 .roundedButtonGroup
+  position: relative
+  z-index: 0
 
   .roundedButtonWrapper
     cursor: pointer
